--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xregexp",
-  "version": "3.1.1",
+  "version": "3.1.2-1",
   "description": "Extended regular expressions",
   "homepage": "http://xregexp.com/",
   "author": "Steven Levithan <steves_list@hotmail.com>",
@@ -21,6 +21,6 @@
     "xregexp-all.js"
   ],
   "scripts": {
-    "build": "./tools/concatenate-source.sh"
+    "build": "sh ./tools/concatenate-source.sh"
   }
 }
