--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "xregexp",
-    "version": "3.1.1-next",
+    "version": "3.1.2-7",
     "description": "Extended regular expressions",
     "homepage": "http://xregexp.com/",
     "authors": [
@@ -14,7 +14,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/slevithan/xregexp.git"
+        "url": "https://github.com/GerHobbelt/xregexp.git"
     },
     "keywords": [
         "regex",
