--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "xregexp-all.js"
   ],
   "scripts": {
-    "postinstall": "sh ./tools/concatenate-source.sh"
+    "build": "sh ./tools/concatenate-source.sh"
   }
 }
