--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "xregexp-all.js"
   ],
   "scripts": {
-    "build": "sh ./tools/concatenate-source.sh"
+    "build": "sh ./tools/concatenate-source.sh",
+    "test": "sh ./tests/run-tests.sh"
+  },
+  "devDependencies": {
+    "jasmine": "2.5.3"
   }
 }
