--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "xregexp-all.js"
   ],
   "scripts": {
-    "build": "sh ./tools/concatenate-source.sh",
-    "test": "sh ./tests/run-tests.sh"
+    "build": "bash ./tools/concatenate-source.sh",
+    "test": "bash ./tests/run-tests.sh"
   },
   "devDependencies": {
     "jasmine": "2.5.3"
