--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "build-orig": "browserify lib/index.js --standalone XRegExp > xregexp-all.js",
     "build": "bash ./tools/concatenate-source.sh",
     "pretest": "npm run build",
-    "test": "jasmine JASMINE_CONFIG_PATH=tests/jasmine.json",
-    "prepublish": "npm test"
+    "test": "jasmine JASMINE_CONFIG_PATH=tests/jasmine.json"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
