--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,21 @@
-# Automatically normalize line endings for all text-based files
-* text=auto eol=lf
+*.sh            text eol=lf
+*.bat           text eol=crlf
+*.php           text eol=lf
+*.inc           text eol=lf
+*.html          text eol=lf
+*.json          text eol=lf
+*.js            text eol=lf
+*.css           text eol=lf
+*.less          text eol=lf
+*.sass          text eol=lf
+*.ini           text eol=lf
+*.txt           text eol=lf
+*.xml           text eol=lf
+*.md            text eol=lf
+*.markdown      text eol=lf
+*.json5         text eol=lf
+
+*.pdf			binary
+*.psd			binary
+*.pptx			binary
+*.xlsx			binary
