introducing rollup to produce the production library files

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,15 @@
 {
-  "plugins": [
-    "add-module-exports",
-    "transform-xregexp",
-    "array-includes"
+  "ignore": [
+    "node_modules/**/*.js"
   ],
-  "presets": [["env", {
-    "exclude": ["transform-es2015-literals"]
-  }]]
+  "compact": false,
+  "retainLines": false,
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "safari >= 7"],
+        "node": "4.0"
+      }
+    }]
+  ]
 }
