--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gerhobbelt/xregexp",
-  "version": "4.0.0-22",
+  "version": "4.0.0-23",
   "description": "Extended regular expressions",
   "homepage": "http://xregexp.com/",
   "author": "Steven Levithan <steves_list@hotmail.com>",
@@ -23,7 +23,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint src",
     "babel": "babel src -d lib",
     "build-unicode-data": "node tools/scripts/block-regex.js && node tools/scripts/category-regex.js && node tools/scripts/property-regex.js && node tools/scripts/script-regex.js",
     "prebuild-orig": "npm run lint && npm run babel",
@@ -41,15 +41,15 @@
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-array-includes": "2.0.3",
     "babel-plugin-transform-xregexp": "0.0.6",
-    "babel-preset-env": "1.6.0",
-    "browserify": "14.4.0",
-    "eslint": "4.9.0",
-    "jasmine": "2.8.0",
+    "babel-preset-env": "1.6.1",
+    "browserify": "16.2.0",
+    "eslint": "4.19.1",
+    "jasmine": "3.1.0",
     "jsesc": "2.5.1",
-    "rollup": "0.50.0",
-    "rollup-plugin-node-resolve": "3.0.0",
-    "unicode-9.0.0": "0.7.4",
-    "unicode-property-value-aliases": "3.0.0",
+    "rollup": "0.58.2",
+    "rollup-plugin-node-resolve": "3.3.0",
+    "unicode-9.0.0": "0.7.5",
+    "unicode-property-value-aliases": "3.2.0",
     "zuul": "3.11.1"
   }
 }
