Use `@babel/` packages instead of `babel-`
(cherry picked from commit 4e90f20b0e5753b997b9bac53faa1683f51b13e1)

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
     "transform-xregexp",
     "array-includes"
   ],
-  "presets": [["env", {
-    "exclude": ["transform-es2015-literals"]
+  "presets": [["@babel/env", {
+    "exclude": ["transform-literals"]
   }]]
 }
