--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    "@babel/plugin-proposal-unicode-property-regex",
     "add-module-exports",
     "transform-xregexp",
     "array-includes"
