updated npm packages

--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
     "pub": "npm publish --access public"
   },
   "devDependencies": {
-    "@gerhobbelt/babel-cli": "7.0.0-beta.530006",
-    "@gerhobbelt/babel-core": "7.0.0-beta.530006",
+    "@gerhobbelt/babel-cli": "7.2.1-26",
+    "@gerhobbelt/babel-core": "7.2.1-26",
     "@gerhobbelt/babel-plugin-add-module-exports": "0.3.3-1",
     "@gerhobbelt/babel-plugin-array-includes": "2.0.3-1",
-    "@gerhobbelt/babel-plugin-transform-xregexp": "1.0.0-1",
-    "@gerhobbelt/babel-preset-env": "7.0.0-beta.530006",
-    "@gerhobbelt/babel-plugin-proposal-unicode-property-regex": "^7.0.0-beta.530006",
-    "browserify": "16.2.2",
-    "eslint": "5.5.0",
-    "jasmine": "3.2.0",
-    "jsesc": "2.5.1",
-    "rollup": "0.65.0",
-    "rollup-plugin-node-resolve": "3.3.0",
-    "unicode-11.0.0": "0.7.7",
+    "@gerhobbelt/babel-plugin-transform-xregexp": "1.0.0-2",
+    "@gerhobbelt/babel-preset-env": "7.2.1-26",
+    "@gerhobbelt/babel-plugin-proposal-unicode-property-regex": "7.2.1-26",
+    "browserify": "16.2.3",
+    "eslint": "5.12.0",
+    "jasmine": "3.3.1",
+    "jsesc": "2.5.2",
+    "rollup": "1.0.2",
+    "rollup-plugin-node-resolve": "4.0.0",
+    "unicode-11.0.0": "0.7.8",
     "unicode-property-value-aliases": "3.3.0",
     "zuul": "3.12.0"
   },
