--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "zuul": "3.12.0"
   },
   "dependencies": {
-    "@gerhobbelt/babel-runtime-corejs2": "^7.2.0"
+    "@gerhobbelt/babel-runtime-corejs2": "^7.2.1-26"
   }
 }
